[PRMT-3574] Changes by mohammadIqbal, joe.fong and martinNhs.